2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, makeMan.in: Support for IRIX.

2003-06-25  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Remove "," and "+" from the "*NickName" and
	  "*ShortNickName" to make the PostScript drivers of Windows happy,
	  fix on auto-abbreviation of "*ShortNickName".

2003-05-09  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Lots of small corrections.

2003-04-30  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated link to Adobe's PostScript documentation.

2003-04-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.0. 
	  Tag name: "foomatic-db-engine-3_0_0".

	* README, USAGE, lib/Foomatic/DB.pm: Updated for version 3.0.0.

2003-04-27  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Stop if an error occurs when building the PPD package.

2003-04-25  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-replaceoldprinterids.in: Changed default pattern on the
	  right side of the printer ID to "(?!\d)", which means that there
	  should be no further digit on the right. This is the right
	  choice in nearly every case.

	* foomatic-compiledb.in: Make "foomatic-compiledb" working with
	  both old numerical and new clear-text printer IDs.

2003-04-23  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Auto-abbreviation of "*ShortNickName"s in
	  the PPD files so that they are not longer than 31 characters to
	  fulfill the Adobe specs.

2003-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.0rc2. 
	  Tag name: "foomatic-db-engine-3_0_0rc2".

	* README, USAGE, Foomatic-Devel-Ideas.txt: Added missing
	  substitution for ampersand in XML files, updated for version
	  3.0.0rc2.
	
2003-04-21  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c, lib/Foomatic/DB.pm, foomatic-configure.in:
	  added restriction for allowed strings by means of lists of